Fix bug that caused horizontal scrolling on certain event names

--- a/src/event.scss
+++ b/src/event.scss
@@ -6,6 +6,10 @@
     text-align: center;
   }
 
+  .played-in {
+    word-break: break-word;
+  }
+
   td {
     padding-left: 0.1em;
     padding-right: 0.1em;
